@@ -1,7 +1,7 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
  *  Copyright (C) 1995-1998  Robert Gentleman and Ross Ihaka
- *  Copyright (C) 1999-2015  The R Core Team.
+ *  Copyright (C) 1999-2016  The R Core Team.
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -244,8 +244,12 @@ SEXP attribute_hidden do_formals(SEXP call, SEXP op, SEXP args, SEXP rho)
     checkArity(op, args);
     if (TYPEOF(CAR(args)) == CLOSXP)
 	return duplicate(FORMALS(CAR(args)));
-    else
+    else {
+	if(!(TYPEOF(CAR(args)) == BUILTINSXP ||
+	     TYPEOF(CAR(args)) == SPECIALSXP))
+	    warningcall(call, _("argument is not a function"));
 	return R_NilValue;
+    }
 }
 
 SEXP attribute_hidden do_body(SEXP call, SEXP op, SEXP args, SEXP rho)
@@ -253,7 +257,12 @@ SEXP attribute_hidden do_body(SEXP call, SEXP op, SEXP args, SEXP rho)
     checkArity(op, args);
     if (TYPEOF(CAR(args)) == CLOSXP)
 	return duplicate(BODY_EXPR(CAR(args)));
-    else return R_NilValue;
+    else {
+	if(!(TYPEOF(CAR(args)) == BUILTINSXP ||
+	     TYPEOF(CAR(args)) == SPECIALSXP))
+	    warningcall(call, _("argument is not a function"));
+	return R_NilValue;
+    }
 }
 
 SEXP attribute_hidden do_bodyCode(SEXP call, SEXP op, SEXP args, SEXP rho)
@@ -688,10 +697,9 @@ SEXP attribute_hidden do_cat(SEXP call, SEXP op, SEXP args, SEXP rho)
 
 SEXP attribute_hidden do_makelist(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
-    SEXP list, names, next;
-    int i, n, havenames;
-
+    int n, havenames;
     /* compute number of args and check for names */
+    SEXP next;
     for (next = args, n = 0, havenames = FALSE;
 	 next != R_NilValue;
 	 next = CDR(next)) {
@@ -700,9 +708,9 @@ SEXP attribute_hidden do_makelist(SEXP call, SEXP op, SEXP args, SEXP rho)
 	n++;
     }
 
-    PROTECT(list = allocVector(VECSXP, n));
-    PROTECT(names = havenames ? allocVector(STRSXP, n) : R_NilValue);
-    for (i = 0; i < n; i++) {
+    SEXP list = PROTECT(allocVector(VECSXP, n));
+    SEXP names = PROTECT(havenames ? allocVector(STRSXP, n) : R_NilValue);
+    for (int i = 0; i < n; i++) {
 	if (havenames) {
 	    if (TAG(args) != R_NilValue)
 		SET_STRING_ELT(names, i, PRINTNAME(TAG(args)));
